--- a/fornecedor/fornecedor-paper.yml
+++ b/fornecedor/fornecedor-paper.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     password: root
     username: root
-    url: 'jdbc:mysql://localhost:3306/fornecedor-paper'
+    url: jdbc:mysql://localhost:3306/fornecedor-paper?serverTimezone=UTC&useLegacyDatetimeCode=false
   jpa:
     hibernate:
       ddl-auto: update
