--- a/transportador/transportador.yml
+++ b/transportador/transportador.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     password: root
     username: root
-    url: 'jdbc:mysql://localhost:3307/transportador'
+    url: jdbc:mysql://localhost:3307/transportador?serverTimezone=UTC&useLegacyDatetimeCode=false
   jpa:
     hibernate:
       ddl-auto: update
